Changelog
=========

0.1.0 (xxxx-xx-xx)
------------------



0.0.2 (2015-12-14)
------------------

* Optimized automated pypi deployment


0.0.1 (2015-12-14)
------------------

* Initial release
* Test automated pypi deployment