@@ -2,7 +2,7 @@
 skipsdist = True
 usedevelop = True
 
-envlist = py{27,33,34,35}-dj{18}-wt{15}, py{27,34,35}-dj{19}-wt{15}, flake8
+envlist = py{27,33,34,35}-dj{18}-wt{16}, py{27,34,35}-dj{19,110}-wt{16}, flake8
 
 [flake8]
 exclude = texsite/*/migrations/*
@@ -22,8 +22,9 @@ basepython =
 deps =
     dj18: Django>=1.8.1,<1.9
     dj19: Django>=1.9,<1.10
+    dj110: Django>=1.10,<1.11
 
-    wt15: wagtail>=1.5,<1.6
+    wt16: wagtail>=1.6,<1.7
 
 [testenv:flake8]
 commands = flake8 texsite
